Set up basic project structure
Each day's puzzle gets its own subdirectory containing a
`solution.cpp/.h` pair and a `test.cpp` file. The solutions contain the
functions used to solve the respective puzzle. They are linked into a
static library which in turn is linked against by both the `aoc21`
executable (which runs it on the downloaded puzzle input on it to
produce the users' individualized solutions) as well as the
`aoc21-test` executable which contains the unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,25 @@ include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
 
 find_package(cpr)
 
+add_library(solutions STATIC)
+
 add_executable(aoc21 main.cpp)
-target_link_libraries(aoc21 PRIVATE cpr::cpr)
+target_link_libraries(aoc21
+    PRIVATE
+        solutions
+        cpr::cpr
+)
+
+enable_testing()
+find_package(GTest)
+include(GoogleTest)
+
+add_executable(aoc21-test)
+gtest_discover_tests(aoc21-test)
+target_link_libraries(aoc21-test
+        PRIVATE
+        solutions
+        GTest::GTest
+)
+
+add_subdirectory(day00)
