Download & cache puzzle input and run solution on it from `main`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,20 @@ set(CMAKE_CXX_STANDARD 20)
 include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
 
 find_package(cpr)
+find_package(fmt)
 
 add_library(solutions STATIC)
+target_link_libraries(solutions
+    PRIVATE
+        fmt::fmt
+)
 
-add_executable(aoc21 main.cpp)
+add_executable(aoc21 main.cpp input.cpp)
 target_link_libraries(aoc21
     PRIVATE
         solutions
         cpr::cpr
+        fmt::fmt
 )
 
 enable_testing()
