Switch from cpr/libcurl to httplib for downloading puzzle inputs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD 20)
 
 include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
 
-find_package(cpr)
 find_package(fmt)
+find_package(OpenSSL)
 
 add_library(solutions STATIC)
 target_link_libraries(solutions
@@ -18,8 +18,12 @@ add_executable(aoc21 main.cpp input.cpp)
 target_link_libraries(aoc21
     PRIVATE
         solutions
-        cpr::cpr
         fmt::fmt
+        OpenSSL::OpenSSL
+)
+target_compile_definitions(aoc21
+    PRIVATE
+        CPPHTTPLIB_OPENSSL_SUPPORT
 )
 
 enable_testing()
@@ -29,7 +33,7 @@ include(GoogleTest)
 add_executable(aoc21-test)
 gtest_discover_tests(aoc21-test)
 target_link_libraries(aoc21-test
-        PRIVATE
+    PRIVATE
         solutions
         GTest::GTest
 )
