--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,4 +65,5 @@ target_link_libraries(aoc21-test
 add_subdirectory(day01)
 add_subdirectory(day02)
 add_subdirectory(day03)
+add_subdirectory(day04)
 add_subdirectory(day05)
