--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,5 +77,6 @@ add_subdirectory(day11)
 add_subdirectory(day12)
 add_subdirectory(day13)
 add_subdirectory(day14)
+add_subdirectory(day15)
 add_subdirectory(day16)
 add_subdirectory(day18)
