--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,6 +36,11 @@ jobs:
           conan profile update settings.compiler.cppstd=20 default
           conan profile update settings.compiler.libcxx=libstdc++11 default
 
+      - uses: actions/cache@v3
+        with:
+          path: ~/.conan/
+          key: ${{ runner.os }}-conan-${{ hashFiles('conanfile.txt') }}
+
       - name: Install dependencies
         run: conan install . --build=missing --install-folder=${{github.workspace}}/build
 
