--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Solve user puzzles
         working-directory: ${{github.workspace}}/build
+        shell: bash
         run: ./aoc21 | tee solutions.txt
 
       - name: Upload solutions
